[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ros-rerun-bridge"
version = "0.0.1"
description = "Config-driven, pluggable ROS2 → Rerun bridge"
authors = [{ name = "Saif Sidhik", email = "mail@saifsidhik.page" }]
requires-python = ">=3.10"
dependencies = [
    "rerun-sdk",
    "numpy",
    "pyyaml",
    # ROS2 deps are system-provided; python-only extras below
    "opencv-python", # for cv_bridge conversion runtime (cv_bridge still required from ROS)
    "trimesh",
    "yourdfpy",
    "pydantic>=2.0",
]

[project.scripts]
ros-rerun-bridge = "ros_rerun_bridge:run"

[tool.setuptools]
packages = [
    "ros_rerun_bridge",
    "ros_rerun_bridge.modules",
    "ros_rerun_bridge.utils",
]
